Transform domain classes to kotlin (#381)
- Transform all domain model classes to Kotlin
- Add mockk